# mpca

./: .commit-msg.txt  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE.md  PR_DESCRIPTION.md  README.md  cliff.toml
.cargo/: config.toml
.github/: copilot-instructions.md
apps/mpca-cli/: Cargo.toml
apps/mpca-cli/src/: main.rs  tui.rs
apps/mpca-cli/tests/: cli_integration.rs
crates/mpca-core/: Cargo.toml
crates/mpca-core/src/: config.rs  error.rs  lib.rs  runtime.rs  state.rs
crates/mpca-core/src/tools/: fs.rs  fs_impl.rs  fs_mock.rs  git.rs  git_impl.rs  git_mock.rs  mod.rs  shell.rs  shell_impl.rs  shell_mock.rs
crates/mpca-core/src/workflows/: execute.rs  init.rs  mod.rs  plan.rs  verify.rs
crates/mpca-core/tests/: test_config_loading.rs  test_execute_workflow.rs  test_full_init_workflow.rs  test_plan_workflow.rs  test_resume_workflow.rs
crates/mpca-pm/: Cargo.toml
crates/mpca-pm/src/: context.rs  engine.rs  error.rs  lib.rs  manager.rs
crates/mpca-pm/templates/: execute.j2  init.j2  plan.j2  review.j2  verification.j2
specs/: design.md  instructions.md  review_report_001.md
