[workspace]
members = [
    "crates/mpca-core",
    "crates/mpca-pm",
    "apps/mpca-cli",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
clap = { version = "4.5.56", features = ["derive"] }
ratatui = "0.30.0"
minijinja = "2.15.1"
claude-agent-sdk-rs = "0.6.3"

mpca-core = { path = "crates/mpca-core" }
mpca-pm = { path = "crates/mpca-pm" }
