[package]
name = "mpca-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
claude-agent-sdk-rs = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
mpca-pm = { workspace = true }
chrono = "0.4"
tracing = "0.1"

[dev-dependencies]
tempfile = { workspace = true }
